added a new type of response informational, cleaned up the success one, BETTER DOCS
