# clean-api/docs/swagger.json
@@ -68,6 +68,56 @@
                 }
             }
         },
+        "/healthcheck": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "healthcheck"
+                ],
+                "summary": "get api and it's dependencies health status",
+                "responses": {
+                    "200": {
+                        "description": "api response",
+                        "schema": {
+                            "$ref": "#/definitions/InfoResponse"
+                        }
+                    },
+                    "503": {
+                        "description": "when the api cannot connect to the database",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/ready": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "healthcheck"
+                ],
+                "summary": "get api health status",
+                "responses": {
+                    "200": {
+                        "description": "api response",
+                        "schema": {
+                            "$ref": "#/definitions/InfoResponse"
+                        }
+                    },
+                    "503": {
+                        "description": "when the api cannot connect to the database",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/recommendations/content-based": {
             "get": {
                 "produces": [
@@ -324,7 +374,7 @@
                     "201": {
                         "description": "api response",
                         "schema": {
-                            "$ref": "#/definitions/ResourceCreatedResponse"
+                            "$ref": "#/definitions/InfoResponse"
                         }
                     },
                     "400": {
@@ -385,7 +435,7 @@
                     "201": {
                         "description": "api response",
                         "schema": {
-                            "$ref": "#/definitions/ResourceCreatedResponse"
+                            "$ref": "#/definitions/InfoResponse"
                         }
                     },
                     "400": {
@@ -502,7 +552,7 @@
                     "201": {
                         "description": "api response",
                         "schema": {
-                            "$ref": "#/definitions/ResourceCreatedResponse"
+                            "$ref": "#/definitions/InfoResponse"
                         }
                     },
                     "401": {
@@ -711,7 +761,7 @@
                     "201": {
                         "description": "api response",
                         "schema": {
-                            "$ref": "#/definitions/ResourceCreatedResponse"
+                            "$ref": "#/definitions/InfoResponse"
                         }
                     },
                     "401": {
@@ -837,6 +887,19 @@
                 }
             }
         },
+        "InfoResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "description": "a comment when necessary",
+                    "type": "string"
+                },
+                "statusCode": {
+                    "description": "http response status code",
+                    "type": "integer"
+                }
+            }
+        },
         "MovieResponse": {
             "type": "object",
             "properties": {
@@ -876,14 +939,6 @@
                 }
             }
         },
-        "ResourceCreatedResponse": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
         "SetupStepResponse": {
             "type": "object",
             "properties": {
@@ -907,10 +962,6 @@
                 "data": {
                     "description": "any kind of success payload",
                     "$ref": "#/definitions/data"
-                },
-                "message": {
-                    "description": "a comment when necessary",
-                    "type": "string"
                 },
                 "statusCode": {
                     "description": "http response status code",
